--- a/portfolio.html
+++ b/portfolio.html
@@ -7,8 +7,8 @@
 
    </head>
     <body>
-        <h1>About Me</h1>
-
+        <h1><strong>About Me</strong></h1>
+        <img src="Portfolio/images/Bear wallpaper.jpg" width="200" height="267" alt="A bear is an animal that represents me">
 
     </body>
 </html>
