--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,12 @@
 
    </head>
     <body>
-        <h1><strong>About Me</strong></h1>
+        <h1><strong>I am Kyle Mmasai</strong></h1>
+        <h2>About Me</h2>
+        <p></p>
+
+        <h2>My Backgroun</h2>
+        <p></p>
         <img src="Portfolio/images/Bear wallpaper.jpg" width="200" height="267" alt="A bear is an animal that represents me">
 
     </body>
