--- a/portfolio.html
+++ b/portfolio.html
@@ -4,14 +4,16 @@
         <meta charset="utf-8">
         <meta name="description" content="This is a website describing Kyle as a programmer">
         <title>A Programming Portfolio of Kyle Mmasai Kioko</title>
+        <link href="css/styles.css" rel="stylesheet" type="text/css">
 
    </head>
     <body>
         <h1><strong>I am Kyle Mmasai</strong></h1>
         <h2>About Me</h2>
-        <p></p>
+        <h3><i>Education</i></h3>
+        <p>In my life I have been fortunate enough to study in two different countries and </p>
 
-        <h2>My Backgroun</h2>
+        <h3>My Background</h3>
         <p></p>
         <img src="Portfolio/images/Bear wallpaper.jpg" width="200" height="267" alt="A bear is an animal that represents me">
 
