--- a/portfolio.html
+++ b/portfolio.html
@@ -7,21 +7,25 @@
         <link href="css/styles.css" rel="stylesheet" type="text/css">
    </head>
     <body>
-        
+        </div>
+        <img src="Portfolio/images/Bear wallpaper.jpg" width="200" height="267" alt="A bear is an animal that represents me">
         <h1><strong>I am Kyle Mmasai</strong></h1>
         <h2>About Me</h2>
         <h3>Education</h3>
+
+        <div>
         <p>In my life I have been fortunate enough to study in three different countries. here are all the schools: </p>
-        <ul>
+        <ul><pre>
             Mosingi Bora - Kenya,3 years
             Green Hills Academy - Rwanda, 7 years
             St. Christopher's - Kenya, 2 years
             Naisula - Kenya, 2 years
             Leibniz Universitat Hannover - Germany, 2 years
-        </ul>
+        </ul></pre>
         <h3>My Background</h3>
-        <p></p>
-        <img src="Portfolio/images/Bear wallpaper.jpg" width="200" height="267" alt="A bear is an animal that represents me">
-
+        <p>I am a Kenyan who's spent most of my life in my home coutry. I have one elder sibling </p>
+        <ol>
+            
+        </ol>
     </body>
 </html>
