add class Ptitle card body

--- a/ip-portfolio.html
+++ b/ip-portfolio.html
@@ -9,11 +9,10 @@
     <body>
         </div>
         <img src="Portfolio/images/Bear wallpaper.jpg" width="200" height="267" alt="A bear is an animal that represents me">
-        <h1><strong>I am Kyle Mmasai</strong></h1>
-        <h2>About Me</h2>
-        <h3>Education</h3>
+        <h1 class="title"><strong>I am Kyle Mmasai</strong></h1>
+        <h2 class="cards" >About Me</h2>
+        <h3 class="cards">Education</h3>
 
-        <div>
         <p>In my life I have been fortunate enough to study in three different countries. here are all the schools: </p>
         <ul><pre>
             Mosingi Bora - Kenya,3 years
@@ -22,8 +21,8 @@
             Naisula - Kenya, 2 years
             Leibniz Universitat Hannover - Germany, 2 years
         </ul></pre>
-        <h3>My Background</h3>
-        <p>I am a Kenyan who's spent most of my life in my home coutry. I have one elder sibling </p>
+        <h3 class="cards">My Background</h3>
+        <p>This is my first time coding so I have no prior experience in this </p>
         <ol>
             
         </ol>
