--- a/ip-portfolio.html
+++ b/ip-portfolio.html
@@ -32,7 +32,7 @@
            <li>HTML</li> 
            <li>CSS</li>
            <li>Bootstrap</li>
-
+        <p>This is a link to the project I've worked on in my time at Moringa <a href="http://127.0.0.1:5501/favourite-things.html"></a>.</p>
         </Ul>
     </body>
 </html>
