--- a/ip-portfolio.html
+++ b/ip-portfolio.html
@@ -11,7 +11,7 @@
         <h1 class="title"><strong>I am Kyle Mmasai</strong></h1>
 
         <h2 class="cards" >About Me</h2>
-        <p
+        <p>I am an aspiring programmer who wants to combine my knowledge of scientific principles and coding to make the science industry better equiped to <br> handle the ever changing </p>
 
         <h3 class="cards">Education</h3>
 
