--- a/ip-portfolio.html
+++ b/ip-portfolio.html
@@ -11,7 +11,7 @@
         <h1 class="title"><strong>I am Kyle Mmasai</strong></h1>
 
         <h2 class="cards" >About Me</h2>
-        <p>I am an aspiring programmer who wants to combine my knowledge of scientific principles and coding to make the science industry better equiped to <br> handle the ever changing </p>
+        <p>I am an aspiring programmer who wants to combine my knowledge of scientific principles and coding to make the science industry better equiped to <br> handle the ever changing world. As previously said I took sciences in high school and that is where I found my passion</p>
 
         <h3 class="cards">Education</h3>
 
@@ -32,7 +32,8 @@
            <li>HTML</li> 
            <li>CSS</li>
            <li>Bootstrap</li>
-        <p>This is a link to the project I've worked on in my time at Moringa <a href="http://127.0.0.1:5501/favourite-things.html"></a>.</p>
+           <li>JavaScript</li>
+           <li>Computer Science Fundamentals</li>
         </Ul>
     </body>
 </html>
