--- a/ip-portfolio.html
+++ b/ip-portfolio.html
@@ -35,5 +35,6 @@
            <li>JavaScript</li>
            <li>Computer Science Fundamentals</li>
         </Ul>
+        <p>This is a link to the project I've worked on in my time at Moringa <a href="http://127.0.0.1:5501/favourite-things.html"></a>.</p>
     </body>
 </html>
