--- a/ip-portfolio.html
+++ b/ip-portfolio.html
@@ -11,8 +11,9 @@
         <h1 class="title"><strong>I am Kyle Mmasai</strong></h1>
 
         <h2 class="cards" >About Me</h2>
+        <div class="column">
         <p>I am an aspiring programmer who wants to combine my knowledge of scientific principles and coding to make the science industry better equiped to <br> handle the ever changing world. As previously said I took sciences in high school and that is where I found my passion</p>
-
+        </div>
         <h3 class="cards">Education</h3>
 
         <p>In my life I have been fortunate enough to study in three different countries. here are all the schools: </p>
