add class column

--- a/ip-portfolio.html
+++ b/ip-portfolio.html
@@ -27,8 +27,9 @@
         </ol>
 
         <h3 class="cards">My Background</h3>
-        
+        <div class="column">
         <p>This is my first time coding. In high school at St. Christopher I took IT as a class and passed it every year I took it. The class was easy so <br> I thought I woud one day want to take something similar again. AS a programmer in training at Moringa School I have learnt the basics of:</p>
+        </div>
         <Ul>
            <li>HTML</li> 
            <li>CSS</li>
