--- a/ip-portfolio.html
+++ b/ip-portfolio.html
@@ -11,8 +11,8 @@
         <h1 class="title"><strong>I am Kyle Mmasai</strong></h1>
 
         <h2 class="cards" >About Me</h2>
-        <div class="column">
-        <p>I am an aspiring programmer who wants to combine my knowledge of scientific principles and coding to make the science industry better equiped to <br> handle the ever changing world. As previously said I took sciences in high school and that is where I found my passion</p>
+        <div class="box-test">
+        <p> am an aspiring programmer who wants to combine my knowledge of scientific principles and coding to make the science industry better equiped to <br> handle the ever changing world. As previously said I took sciences in high school and that is where I found my passion</p>
         </div>
         <h3 class="cards">Education</h3>
 
@@ -27,7 +27,7 @@
         </ol>
 
         <h3 class="cards">My Background</h3>
-        <div class="column">
+        <div class="box-test">
         <p>This is my first time coding. In high school at St. Christopher I took IT as a class and passed it every year I took it. The class was easy so <br> I thought I woud one day want to take something similar again. AS a programmer in training at Moringa School I have learnt the basics of:</p>
         </div>
         <Ul>
@@ -37,6 +37,6 @@
            <li>JavaScript</li>
            <li>Computer Science Fundamentals</li>
         </Ul>
-        <p>This is a link to the project I've worked on in my time at Moringa <a href="http://127.0.0.1:5501/favourite-things.html"></a>.</p>
+        <p>This is a link to the project I've worked on in my time at Moringa <a href="https://github.com/Kyle-debug/portfolio">here.</a></p>
     </body>
 </html>
