--- a/ip-portfolio.html
+++ b/ip-portfolio.html
@@ -3,7 +3,7 @@
    <head>
         <meta charset="utf-8">
         <meta name="description" content="This is a website describing Kyle as a programmer">
-        <title>A Programming Portfolio of Kyle Mmasai Kioko</title>
+        <title><em>Programming Portfolio of Kyle Mmasai Kioko</em></title>
         <link href="css/styles.css" rel="stylesheet" type="text/css">
    </head>
     <body>
@@ -11,8 +11,8 @@
         <h1 class="title"><strong>I am Kyle Mmasai</strong></h1>
 
         <h2 class="cards" >About Me</h2>
-        <div class="box-test">
-        <p> am an aspiring programmer who wants to combine my knowledge of scientific principles and coding to make the science industry better equiped to <br> handle the ever changing world. As previously said I took sciences in high school and that is where I found my passion</p>
+        <div class="box-1">
+        <p> am an aspiring <em>programmer</em> who wants to combine my knowledge of scientific principles and coding to make the science industry better equiped to <br> handle the ever changing world. As previously said I took sciences in high school and that is where I found my passion</p>
         </div>
         <h3 class="cards">Education</h3>
 
@@ -27,8 +27,8 @@
         </ol>
 
         <h3 class="cards">My Background</h3>
-        <div class="box-test">
-        <p>This is my first time coding. In high school at St. Christopher I took IT as a class and passed it every year I took it. The class was easy so <br> I thought I woud one day want to take something similar again. AS a programmer in training at Moringa School I have learnt the basics of:</p>
+        <div class="box-2">
+        <p>This is my <em> first time </em> coding. In high school at St. Christopher I took IT as a class and passed it every year I took it. The class was easy so <br> I thought I woud one day want to take something similar again. AS a programmer in training at Moringa School I have learnt the basics of:</p>
         </div>
         <Ul>
            <li>HTML</li> 
