--- a/ip-portfolio.html
+++ b/ip-portfolio.html
@@ -3,7 +3,7 @@
    <head>
         <meta charset="utf-8">
         <meta name="description" content="This is a website describing Kyle as a programmer">
-        <title><em>Programming Portfolio of Kyle Mmasai Kioko</em></title>
+        <title>Programming Portfolio of Kyle Mmasai Kioko</title>
         <link href="css/styles.css" rel="stylesheet" type="text/css">
    </head>
     <body>
@@ -11,13 +11,12 @@
         <h1 class="title"><strong>I am Kyle Mmasai</strong></h1>
 
         <h2 class="cards" >About Me</h2>
-        <div class="box-1">
         <p> am an aspiring <em>programmer</em> who wants to combine my knowledge of scientific principles and coding to make the science industry better equiped to <br> handle the ever changing world. As previously said I took sciences in high school and that is where I found my passion</p>
-        </div>
         <h3 class="cards">Education</h3>
 
         <p>In my life I have been fortunate enough to study in three different countries. here are all the schools: </p>
 
+        <div class="box-1">
         <ol>
             <li> Bora - Kenya,3 years</li>
             <li> Hills Academy - Rwanda, 7 years</li>
@@ -25,11 +24,10 @@
             <li>Naisula - Kenya, 2 years</li>
             <li>Leibniz Universitat Hannover - Germany, 2 years</li>
         </ol>
+        </div>
 
         <h3 class="cards">My Background</h3>
-        <div class="box-2">
         <p>This is my <em> first time </em> coding. In high school at St. Christopher I took IT as a class and passed it every year I took it. The class was easy so <br> I thought I woud one day want to take something similar again. AS a programmer in training at Moringa School I have learnt the basics of:</p>
-        </div>
         <Ul>
            <li>HTML</li> 
            <li>CSS</li>
@@ -37,6 +35,6 @@
            <li>JavaScript</li>
            <li>Computer Science Fundamentals</li>
         </Ul>
-        <p>This is a link to the project I've worked on in my time at Moringa <a href="https://github.com/Kyle-debug/portfolio">here.</a></p>
+        <p><span > is a link to the project I've worked on in my time at Moringa</span> <a href="https://github.com/Kyle-debug/portfolio">here.</a></p>
     </body>
 </html>
