--- a/ip-portfolio.html
+++ b/ip-portfolio.html
@@ -36,6 +36,6 @@
            <li>Computer Science Fundamentals</li>
         </Ul>
         <p><span > is a link to the project I've worked on in my time at Moringa</span> <a href="https://github.com/Kyle-debug/portfolio">here.</a></p>
-        <img src="white-bear.jpg" alt="Here is an animal that represents me">
+        <div class="img"><img src="white-bear.jpg"/></div>
     </body>
 </html>
