--- a/ip-portfolio.html
+++ b/ip-portfolio.html
@@ -8,15 +8,13 @@
    </head>
     <body>
         
-        <h1 class="title"><strong>I am Kyle Mmasai</strong></h1>
+        <div><h1 class="box-1" class="title"><strong>I am Kyle Mmasai</strong></h1></div>
 
         <h2 class="cards" >About Me</h2>
         <p> am an aspiring <em>programmer</em> who wants to combine my knowledge of scientific principles and coding to make the science industry better equiped to <br> handle the ever changing world. As previously said I took sciences in high school and that is where I found my passion</p>
         <h3 class="cards">Education</h3>
 
         <p>In my life I have been fortunate enough to study in three different countries. here are all the schools: </p>
-
-        <div class="box-1">
         <ol>
             <li> Bora - Kenya,3 years</li>
             <li> Hills Academy - Rwanda, 7 years</li>
@@ -24,8 +22,6 @@
             <li>Naisula - Kenya, 2 years</li>
             <li>Leibniz Universitat Hannover - Germany, 2 years</li>
         </ol>
-        </div>
-
         <h3 class="cards">My Background</h3>
         <p>This is my <em> first time </em> coding. In high school at St. Christopher I took IT as a class and passed it every year I took it. The class was easy so <br> I thought I woud one day want to take something similar again. AS a programmer in training at Moringa School I have learnt the basics of:</p>
         <Ul>
@@ -35,7 +31,7 @@
            <li>JavaScript</li>
            <li>Computer Science Fundamentals</li>
         </Ul>
-        <p><span > is a link to the project I've worked on in my time at Moringa</span> <a href="https://github.com/Kyle-debug/portfolio">here.</a></p>
+        <p><span >This is a link to the project I've worked on in my time at Moringa</span> <a href="https://github.com/Kyle-debug/portfolio">here.</a></p>
         <div class="img"><img src="white-bear.jpg"/></div>
     </body>
 </html>
