--- a/ip-portfolio.html
+++ b/ip-portfolio.html
@@ -13,8 +13,9 @@
         <h2 class="cards" >About Me</h2>
         <p> am an aspiring <em>programmer</em> who wants to combine my knowledge of scientific principles and coding to make the science industry better equiped to <br> handle the ever changing world. As previously said I took sciences in high school and that is where I found my passion</p>
         <h3 class="cards">Education</h3>
-
+        <div class="p1">
         <p>In my life I have been fortunate enough to study in three different countries. here are all the schools: </p>
+        </div>
         <ol>
             <li> Bora - Kenya,3 years</li>
             <li> Hills Academy - Rwanda, 7 years</li>
@@ -23,7 +24,9 @@
             <li>Leibniz Universitat Hannover - Germany, 2 years</li>
         </ol>
         <h3 class="cards">My Background</h3>
+        <div class="p2">
         <p>This is my <em> first time </em> coding. In high school at St. Christopher I took IT as a class and passed it every year I took it. The class was easy so <br> I thought I woud one day want to take something similar again. AS a programmer in training at Moringa School I have learnt the basics of:</p>
+        </div>
         <Ul>
            <li>HTML</li> 
            <li>CSS</li>
